--- a/06-Analyse/source.tex
+++ b/06-Analyse/source.tex
@@ -12,13 +12,14 @@ La démarche expérimentale est constructive: nous proposons un modèle qui semb
 Nous avons présenté ce modèle et les méthodes de représentations sur lesquelles nous nous appuierons.
 L'expérience présentée en exemple du chapitre représentations a permis d'identifier quelques comportements élémentaires émergeant des connexions entre cartes.
 
-Dans ce chapitre, nous définirons plus précisément ce que signifie l'apprentissage de données multimodales par une arhcitecture de quelques cartes, en s'appuyant sur des données de répartition différentes.
-A partir de ces comportement d'apprentissage, nous effectuerons une analyse des paramètres de l'architecture.
-A l'issue de ce chapitre, nous serons donc en mesure de construire des architecture de 2 et 3 cartes et d'identifier leur capacité d'apprentissage.
+A partir des comportements que nous observerons sur plusieurs ensembles de données, nous chercherons d'abord à définir comment s'effectue l'apprentissage multimodale dans une structure de cartes.
+Une fois ces comportements définis, nous effectuerons une analyse paramétrique sur des petites architectures.
+A l'issue de ce chapitre, nous serons donc en mesure de construire des architecture de 2 et 3 cartes et d'identifier leur capacité d'apprentissage. Nous concluerons sur la scalabilité du modèle à des architectures comportant un plus grand nombre de carte.
 
-\subsection{Méthode expériementale}
+\subsection{Méthode expérimentale}
 
-Les résultats que nous présentons dans ce chapitre sont obtenues sur des données multimodales géométriques, réparties différemment dans leurs espaces d'entrées.
+Nous réaliserons dans ce chapitre des expériences sur différentes structures de données d'entrées. Ces entrées sont tirées de modèles géométriques, nous permettant de définir des propriétés et de maîtriser les dépendances entre entrées. 
+
 Nous réutiliserons l'expérience présentée au chapitre représentation, sur des données disposée en cercle. Cette disposition est symétrique et laisse deux possibilités pour chaque entrée en sachant la première.
 Nous faisons varier cette propriété en observant le comportement de deux cartes sur des entrées identiques (cas dégénéré), et sur des entrées indépendantes, prises aléatoirement. Entre ces deux cas dégénéré, nous observerons le comportement d'une architecture sur des exemples d'entrées différentes, dont les relations sont représentées en figure.
 Nous choississons d'ajouter du bruit aux données: le cercle sera en fait un anneau, etc.
@@ -30,16 +31,41 @@ Les architectures étudiées sont des architectures de cartes en une dimension. 
 
 L'analyse paramétrique sera menée sur l'expérience du cercle. Nous avons en effet observé que le comportement des cartes selon différentes courbes est générique. Nous nous restreignons alors à étudier les paramètres du modèle sur un exemple particulier.
 
-\section{Quels comportements observés caratérisent l'apprentissage ?}
+\begin{figure}
+	\begin{minipage}{\textwidth}
+		\begin{minipage}{0.33\textwidth}
+			\includegraphics[width=\textwidth]{2som_id_in.pdf}
+		\end{minipage}
+		\begin{minipage}{0.33\textwidth}
+			\includegraphics[width=\textwidth]{2som_courbe000_inputs.pdf}
+		\end{minipage}
+		\begin{minipage}{0.33\textwidth}
+			\includegraphics[width=\textwidth]{2som_mix_in.pdf}
+		\end{minipage}
+	\end{minipage}
+	\begin{minipage}{\textwidth}
+		\begin{minipage}{0.33\textwidth}
+			\includegraphics[width=\textwidth]{2som_inp_noU.pdf}
+		\end{minipage}
+		\begin{minipage}{0.33\textwidth}
+			\includegraphics[width=\textwidth]{2som_mix001_in.pdf}
+		\end{minipage}
+		\begin{minipage}{0.33\textwidth}
+			\includegraphics[width=\textwidth]{2som_square_in.pdf}
+		\end{minipage}
+	\end{minipage}
+	
+\end{figure}
 
-Notamment, nous avons observé que les poids contextuels s'organisent de façon à ce qu'une carte différencie son BMU en fonction de son entrée externe et de son entrée contextuelle. 
+\section{Quels comportements sont caratréristiques d'un apprentissage ?}
 Dans ce chapitre, nous analyserons ces comportements plus en détail, et identifierons les comportements \emph{systémiques} émergeant d'une architecture simple à deux et trois cartes.
+\subsection{Quantification vectorielle sur les entrées externes}
 
-\subsection{Qu'est ce qu'on attend d'un apprentissage de données multimodales}
+On veut d'abord que les poids externes de la carte encodent l'information de l'entrée. Ce sont en effet ces poids qui nous permettrons de faire de la prédiction ensuite.
+Sur les différentes entrées, cette quantification est correctement réalisée. 
+Cette quantification sur chaque carte est une première condition à vérifier pour évaluer l'organisation d'une architecture.
 
-\subsection{Quantification vectorielle de bonne qualité sur les entrées externes}
-
-\subsection{Découpage d'une carte 1D et 2D en zones par les poids contextuels}
+\subsection{Découpage d'une carte 1D et 2D en zones grâce aux poids contextuels}
 
 Une architecture de cartes est un système complexe. 
 Dans une logique de construction d'architecture, nous voulons d'abord identifier des comportements collectifs de cartes qui pourraient être intéressants dans l'apprentissage de données multimodales.
@@ -51,7 +77,6 @@ Nous considérerons des entrées tirées sur un cercle en deux et trois dimensio
 Dans cette disposition, chaque abcsisse $x$ correspond à deux valeurs de $y$, et inversement.
 Dans cette disposition, nous ajoutons un bruit: le cercle sera en fait un anneau. Nous souhaitons ainsi évaluer si les cartes sont résistantes au bruit d'entrée et apprennent une représentation de la structure débruitée.
 Nous étudierons également une disposition d'entrée prise sur l'ensemble du carré unité. Cette disposition d'entrée permet d'étudier comment une carte se comporte dans le cas ou il n'existe pas de relation entre les entrées.
-
 
 Analysons d'abord la forme des poids contextuels de $M\m{1}$, que nous avions tracés en figure~\ref{fig:weights} sans les commenter. Les poids externes, en orange, présentent une disposition similaire à ceux observés dans la carte classique (b). Les poids contextuels, en bleu, présentent une forme de vagues, avec 7 valeurs de maximum allant de 0.5 à 1, et 6 minimum allant de 0.5 à 0.1. Ces maximum et minimum sont répartis en zones de taille équivalente sur la carte. 
 
@@ -72,7 +97,6 @@ Deux zones adjacentes correspondent par ailleurs à des segments de valeur d'ent
 \end{figure}
 
 Cherchons à généraliser ce comportement: la disposition en zones traduit elle l'existence de l'apprentissage d'une relation entre entrée ?
-
 Nous tracons la représentation cartographique des poids des deux cartes sur d'autres dispositions d'entrées: 
 \begin{itemize}
 	\item Lorsque $\inpx\m{1} = \inpx\m{2}$. La relation entre les deux entrées est alors une bijection. On s'attend à ce qu'on n'ai pas besoin de zones.
@@ -110,8 +134,13 @@ Nous tracons la représentation cartographique des poids des deux cartes sur d'a
 \end{figure}
 
 \begin{figure}
-	\includegraphics[width=0.8\textwidth]{2som_square_w.pdf}
-	\caption{Représentation cartographique des poids et entrées pour la disposition carré}
+	\begin{minipage}{0.66\textwidth}
+		\includegraphics[width=\textwidth]{2som_square_w.pdf}
+	\caption{Représentation cartographique des poids et entrées pour la disposition mix}
+	\end{minipage}
+	\begin{minipage}{0.33\textwidth}
+		\includegraphics[width=\textwidth]{2som_square_in.pdf}
+	\end{minipage}
 \end{figure}
 
 
@@ -123,7 +152,19 @@ Nous tracons la représentation cartographique des poids des deux cartes sur d'a
 
 \subsection{Différenciation de $U$ selon les BMUs: indicateur d'une mémoire associative}
 
-\subsection{Prédiction d'entrée comme marqueur du comportemnt des cartes}
+
+
+\subsection{Qu'appelle t'on apprentissage des données multimodales ?}
+
+A partir des comportements observés, définissons les comportements marquant l'apprentissage de données multimodales, et quelles mesures indiquent l'existence de cet apprentissage.
+Le but de la mémoire assoctative est d'apprendre des données de plusieurs modalités et d'apprendre leurs associations. L'apprentissage des données indépendantes est donc un comportement nécessaire à cette mémoire associative. 
+Nous avons observé sur les différentes expériences que le poids du BMU $\omega_e(\bmu)$ est proche de la valeur de l'entrée pour tout l'espace. La quantification vectorielle effectuée dans chaque carte est donc bonne, marquant l'apprentissage des données de façon indépendante. Nous aurons besoin de vérifier ce comportement comme indicateur du bon fonctionnement d'une architecture.
+
+Le but de la mémoire associative est d'apprendre des relations entre les entrées. Comme une carte cherche à extraire une structure dans les données de son espace d'entrée, observe t-on l'apprentissage d'une structure dans les relations entre entrées dans l'architecture de cartes ? 
+Cet apprentissage de relations passe par la disposition en zones auto-organisées au sein d'une carte. Ces zones, nous l'avons vu, déterminent la BMU de chaque carte en fonction de l'ensemble des entrées et non seulement de l'entrée de la carte en question. Ces zones ne marquent pas l'apprentissage d'une relation: dans les cas ou les entrées sont indépendantes, la carte se divise quand même en zones distinctes. La présence de zones est spécifique au comportement de l'architecture CxSOM.
+L'apprentissa
+
+\section{Prédiction d'entrée comme marqueur de la mémoire associative}
 
 
 \subsection{Conclusion}
@@ -134,4 +175,17 @@ Ces architectures de quelques cartes sont des architectures \emph{élémentaires
 Nous avons identifié les comportements générés dans CxSOM qui montrent un apprentissage des données multimodales. Nous comparerons dans cette section ces comportements pour différents paramètres pour une architecture de trois cartes.
 
 
+\section{Extension sur deux dimensions}
 
+maj du 5 juillet:
+2som2D in4D simulée, et code pour les affichage faits.
+
+Les comportements d'une architecture de carte ont été mis en lumière sur des cartes 1D et des entrées 1D. Nous présentons dans cette section les comportements observés sur une architecture de deux cartes de type grille en deux dimensions.
+
+Nous travaillons à présent sur des entrées en deux dimensions. Ces entrées sont les coordonnées 4D d'une sphere 3D tournée dans l'espace 4D, similairement au cercle. Nous prenons une architecture de deux cartes, prenant chacune une paire d'entrées $X,Y$ et $Z,T$. Les entrées ayant un rôle symétrique, la paire choisie importe peu.
+
+Ces cartes apprennent sur une sphere qui est "tournée" dans l'espace 4D, Ainsi, si on trace n'importe quel groupe de 3 coordonnée, ca fait un truc sphérique. Chaque carte prend deux coordonnées.
+On a un U en 2 dimensions (coordonnées polaires d'une sphere)
+Voici les vidéos des tracés des poids externes et contextuels (2D) de chaque carte.
+Voici le tracé des erreurs de quantification dans chaque carte, ainsi que uv.
+Il semble que bien qu'on retrouve le comportement en sous indices, on n'apprend pas spécialement de relations sur des cartes 2D. Selon moi, il faudrait d'explorer un grand nombre de paramètres pour éventuellement trouver un comportement émergeant. L'existence d'un tel comportement n'est pas exclu mais rien ne le garantit.
